NATTQA-ENV/force-app/main/default/objects/NATT_PAR__c/NATT_PAR__c.object-meta.xml
<CustomObject>
    <description>NATT PAR (Primary Areas of Responsibility) records for Accounts</description>
    <label>PAR</label>
    <nameField>
        <label>PAR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PAR</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>