NATTQA-ENV/force-app/main/default/objects/NATT_PAR__c/fields/NATT_Account__c.field-meta.xml
<CustomField>
    <fullName>NATT_Account__c</fullName>
    <description>NATT Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PAR</relationshipLabel>
    <relationshipName>PAR</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>