NATTQA-ENV/force-app/main/default/objects/NATT_PAR__c/fields/NATT_Country__c.field-meta.xml
<CustomField>
    <fullName>NATT_Country__c</fullName>
    <defaultValue>&quot;United States&quot;</defaultValue>
    <description>NATT Country</description>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>