NATTQA-ENV/force-app/main/default/objects/NATT_PAR__c/fields/NATT_County__c.field-meta.xml
<CustomField>
    <fullName>NATT_County__c</fullName>
    <description>NATT County</description>
    <label>County</label>
    <length>80</length>
    <type>Text</type>
</CustomField>