NATTQA-ENV/force-app/main/default/objects/NATT_PAR__c/fields/NATT_Notes__c.field-meta.xml
<CustomField>
    <fullName>NATT_Notes__c</fullName>
    <description>NATT Notes</description>
    <label>Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>