NATTQA-ENV/force-app/main/default/objects/NATT_PAR__c/fields/NATT_Special_Products__c.field-meta.xml
<CustomField>
    <fullName>NATT_Special_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT</description>
    <label>Special Products</label>
    <type>Checkbox</type>
</CustomField>