NATTQA-ENV/force-app/main/default/objects/NATT_PAR__c/fields/NATT_State__c.field-meta.xml
<CustomField>
    <fullName>NATT_State__c</fullName>
    <description>NATT State</description>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>