NATTQA-ENV/force-app/main/default/objects/NATT_PAR__c/recordTypes/CTBR_PAR.recordType-meta.xml
<RecordType>
    <fullName>CTBR_PAR</fullName>
    <active>true</active>
    <description>CTBR PAR</description>
    <label>CTBR PAR</label>
</RecordType>