NATTQA-ENV/force-app/main/default/objects/NATT_PAR__c/recordTypes/CTM_PAR.recordType-meta.xml
<RecordType>
    <fullName>CTM_PAR</fullName>
    <active>true</active>
    <description>PAR Record Type for CTM.</description>
    <label>CTM PAR</label>
</RecordType>