NATTQA-ENV/force-app/main/default/objects/NATT_PAR__c/recordTypes/NATT_PAR.recordType-meta.xml
<RecordType>
    <fullName>NATT_PAR</fullName>
    <active>true</active>
    <description>NATT PAR</description>
    <label>NATT PAR</label>
</RecordType>